change http to https

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -44,6 +44,10 @@ select {
   text-decoration: none;
 }
 
+.listdemoBasicUsage md-divider {
+  margin-top: 10px;
+  margin-bottom: 0; 
+} 
 
 .enjoy-css {
   display: inline-block;
