--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,8 @@
+body{
+  background: -webkit-linear-gradient(top, #db7093 0%,#ffffff 100%);
+  font-family: 'Ubuntu', sans-serif;
+}
+
 h1{
   text-align: center;
   font-family: Arial;
@@ -32,6 +37,25 @@ select {
     cursor:pointer;
 }
 
+div.box.ng-scope{
+  width: 32%;
+  top: 30px;
+  right: 64%;
+}
+
+.listElements{
+  position: absolute;
+  margin-left: 30em;
+  max-width: 30%;
+  text-align: -webkit-center;
+  background: #FAE5E5;
+  border-radius: 20px
+}
+
+md-card md-card-header md-card-header-text{
+  padding-top: 10px
+}
+
 .btn {
   -webkit-border-radius: 5;
   -moz-border-radius: 5;
@@ -44,10 +68,7 @@ select {
   text-decoration: none;
 }
 
-.listdemoBasicUsage md-divider {
-  margin-top: 10px;
-  margin-bottom: 0; 
-} 
+
 
 .enjoy-css {
   display: inline-block;
@@ -59,11 +80,9 @@ select {
   border: 1px solid #b7b7b7;
   -webkit-border-radius: 20px;
   border-radius: 20px;
-  font: normal 16px/normal "Times New Roman", Times, serif;
   color: rgba(0,142,198,1);
   -o-text-overflow: clip;
   text-overflow: clip;
-  text-shadow: 1px 1px 0 rgba(255,255,255,0.66) ;
 }
 
 .box{
@@ -72,13 +91,13 @@ select {
   right: 64%;
  }
 
- #discover-header {
-  color: #35B1D0;
-  font-size: 5em; 
-  font-weight: 700; 
-  text-align: center; 
-  padding-top: 0.5em;
-  padding-bottom: 0.1em;
-}
+ #header {
+    color: rgb(236, 236, 236);
+    font-size: 5em;
+    font-weight: 700;
+    text-align: center;
+    padding-top: 0.5em;
+    padding-bottom: 0.1em;
+  }
 
 
