--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,98 +1,68 @@
-
 <div>
 
-    <div id="discover-header">
-      <span>MoBee</span>
-    </div>
+  <div id="header">
+    <span>MoBee 🐝</span>
+  </div>
 
   <div layout="row" >
     <div flex></div>
-      <md-input-container flex="40" md-no-float>
-        <label>Title</label>
-        <md-icon <i class="material-icons">&#xE63B;</i></md-icon>
-        <input class="enjoy-css" type="search" ng-change='findMovie()' ng-model='film'/>
-      </md-input-container>
+    <md-input-container flex="40" md-no-float>
+      <label>Title</label>
+      <md-icon md-svg-icon='images/ic_theaters_black_36px.svg'></md-icon>
+      <input class="enjoy-css" type="search" ng-change='findMovie()' ng-model='film'/>
+    </md-input-container>
     <div flex></div>
   </div>
-  <div flex='50' >
-    <md-list flex layout-align="center center" >
-      <md-list-item class="md-3-line md-raised" ng-repeat="films in search">
+
+  <div class='listElements'>
+    <md-list layout-align="space-around center" >
+      <md-list-item ng-repeat="films in search">
         <div ng-click='addToMovies(films.Title)'>
           <h3>{{ films.Title }}</h3>
         </div>
-      <md-divider></md-divider>
+        <md-divider></md-divider>
       </md-list-item>
     </md-list >
   </div>
 
 
-<!--   <div layout="column" >
-    <div flex></div>
-      <md-input-container flex="40" md-no-float>
-        <label>Title</label>
-        <md-icon <i class="material-icons">&#xE63B;</i></md-icon>
-        <input class="enjoy-css" type="search" ng-change='findMovie()' ng-model='film'/>
-      </md-input-container>
-      <md-list flex  md-no-float>
-      <md-list-item class="md-3-line" ng-repeat="films in search">
-        <div class="md-list-item-text">
-          <h3 ng-click='addToMovies(films.Title)'>{{ films.Title }}</h3>
-        </div>
-      <md-divider></md-divider>
-      </md-list-item>
-    </md-list >
-    <div flex></div>
-  </div> -->
+  <div layout="row" layout-align="space-around left">
+    <div ng-repeat="movie in data.movies"  class='box' >
 
+      <md-card>
 
- <!--  <section layout="row">
-    <div flex></div>
-    <div flex="40" id="query-results-container">
-      <div layout="row" layout-padding id="query-results"  ng-repeat="films in search ">
-          <span id="name-query-results" layout-padding  ng-click='addToMovies(films.Title)'>{{films.name}}</span>
-        </div>
-      </div>
-    </div>
-    <div flex></div>  
-  </section> -->
-
-  <div layout="row" layout-align="space-around center">
-  <div ng-repeat="movie in data.movies"  class='box' >
-<md-card>
         <md-card-header>
-            <md-button class="md-icon-button md-accent" aria-label="delete" ng-click='deleteFromSelection(movie)'>
-  <md-icon <i class="material-icons">&#xE14C;</i></md-icon>
-  </md-button>
-
+          <md-button class="md-icon-button md-accent" aria-label="delete" ng-click='deleteFromSelection(movie)'>
+            <md-icon md-svg-icon='images/ic_close_black_24px.svg'></md-icon>
+          </md-button>
           <md-card-header-text>
-            <span class="md-title">{{ movie.Title }}</span>
+            {{ movie.Title }}
           </md-card-header-text>
         </md-card-header>
+
         <img ng-src="{{ movie.Poster }}" class="md-card-image" alt="Washed Out">
         <md-card-title>
           <md-card-title-text>
-                  <div ng-show='rating == movie.imdbRating'>  
-        <md-icon <i class="material-icons">&#xE8D0;</i></md-icon><md-icon <i class="material-icons">&#xE8D0;</i></md-icon><md-icon <i class="material-icons">&#xE8D0;</i></md-icon><md-icon <i class="material-icons">&#xE8D0;</i></md-icon><md-icon <i class="material-icons">&#xE8D0;</i></md-icon>
-      </div>
-
+            <div layout-align="space-around center" ng-show='rating == movie.imdbRating'>
+              <md-icon md-svg-icon='images/ic_star_black_24px.svg'></md-icon>
+              <md-icon md-svg-icon='images/ic_star_black_24px.svg'></md-icon>
+              <md-icon md-svg-icon='images/ic_star_black_24px.svg'></md-icon>
+              <md-icon md-svg-icon='images/ic_star_black_24px.svg'></md-icon>
+              <md-icon md-svg-icon='images/ic_star_black_24px.svg'></md-icon>
+            </div>
             <span class="md-headline">{{ movie.Director }}</span>
             <span class="md-subhead">Rating : {{ movie.imdbRating }}</span>
             <span class="md-subhead">Genre: {{ movie.Genre }}</span>
-
           </md-card-title-text>
         </md-card-title>
+
         <md-card-content>
           <p> {{ movie.Plot }} </p>
-        <a> {{ movie.Year }} </a> <br>
-        <a> {{ movie.Awards }} </a>
-
+          <a> {{ movie.Year }} </a> <br>
+          <a> {{ movie.Awards }} </a>
         </md-card-content>
+
       </md-card>
-
-
-
-      </div>
     </div>
-  </div>
   </div>
 </div>
